syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.benchmarks";
option java_outer_classname = "Small1BenchmarkProto";

package benchmarks;

message Small1Request {
  string name = 1;
}

message Small1Reply {
  string message = 1;
}
